NGSTACK-605 fix gaps on category children list

--- a/assets/sass/layout/_grid.scss
+++ b/assets/sass/layout/_grid.scss
@@ -28,3 +28,9 @@
     flex-direction: column;
     gap: $grid-gutter-width;
 }
+
+.category-children {
+    .row {
+        gap: $grid-gutter-width 0;
+    }
+}
